Summary of changes between versions 2.0.0 and 2.1.0
---------------------------------------------------

 - Complete NPIV support added. Particularly, now SCST core sees
   all the virtual targets and provide separate target-oriented access
   control for them. Thanks a lot to Uri Yanai and Dorit
   Halsadi!

 - Node name setting added

 - qlini_mode "disabled" parameter handling improved

 - Other minor fixes and cleanups


Summary of changes between versions 1.0.2 and 2.0.0
---------------------------------------------------

 - Support for 24xx/25xx added

 - Disable by default initiator mode if target mode enabled. It can be changed
   using .config option CONFIG_SCSI_QLA2XXX_TARGET_DISABLE_INI_MODE.


Summary of changes between versions 1.0.1 and 1.0.2
---------------------------------------------------

 - Failure of enabling target mode, if do it too fast, fixed
   Based on work by sdrb <sdrb@onet.eu>

 - Possible crash with too fast target mode enabling/disabling or
   module unload fixed

 - Implemented abort on timeout of stuck in the firmware commands


Summary of changes between versions 1.0.0 and 1.0.1
---------------------------------------------------

 - Update to initiator driver from 2.6.27

 - HOWTO added (Amit Mehta)

 - Fixed wrong sess_count decrement on session registration failure

 - Fixed possible oops in the initiator driver on the module unload

 - Updated to work on kernels up to 2.6.29

 - Other minor fixes


Summary of changes between versions 0.9.5 and 1.0.0
---------------------------------------------------

 - Fixed sg_tablesize in qla2x00t to be per target card, not global

 - Updated to work on 2.6.25.x

 - Updated to work on 2.6.24.x

 - Fixed possible crash if tgt module rmmod'ed under load

 - Fixed incorrect residual on internal BUSY replies

 - Updated to work on 2.6.23.x

 - Fixes a race, when an event comes on the driver unload, so DPC thread
   will try to use already half destroyed data. 
